# crewai_financial_news_summarizer

./: README.md  pyproject.toml
src/finance_news_analyzer/: __init__.py  crew.py  main.py
src/finance_news_analyzer/config/: agents.yaml  tasks.yaml
src/finance_news_analyzer/tools/: __init__.py  bloomberg_tool.py
src/finance_news_analyzer/tools/common/: user_agent_generator.py  web_scrapper.py
